# starlink

./: .gitignore  Dockerfile  Makefile  OrbitPropagator.py  README.md  city.py  constants.py  deploy  docker-compose-local.yml  docker-compose-remote.yml  docker-compose.yml  main.py  moving_object.py  objects.txt  op_test.py  orbit.py  orbital_mechanics_utils.py  planetary_data.py  pyproject.toml  pytest.ini  relation_utils.py  starlink_phase_1_tle  stationary_object.py  tools.py  utils.py
simulator/: .dockerignore  Dockerfile  Makefile  __init__.py  city.py  constants.py  db_operations.py  main.py  moving_object.py  orbit.py  orbital_mechanics_utils.py  pyproject.toml  relation_utils.py  starlink.py  start.py  utils.py  wait-for-it.sh
simulator/database/: __init__.py  connection.py
simulator/imports/: cities.csv  tle_1  tle_2  tle_3  tle_4
simulator/simulator/: constants.py  db_operations.py  orbital_mechanics_utils.py  relation_utils.py  setup.py  starlink.py  utils.py
simulator/simulator/database/: __init__.py  connection.py  memgraph.py
simulator/simulator/models/: __init__.py  city.py  moving_object.py  orbit.py  stationary_object.py
simulator/src/: city.py  constants.py  db_operations.py  moving_object.py  orbit.py  orbital_mechanics_utils.py  relation_utils.py  starlink.py  start.py  stationary_object.py  utils.py
simulator/src/database/: __init__.py  connection.py  memgraph.py  models.py
web_app/: Dockerfile  Makefile  app.py  manage.py  pyproject.toml  start.sh
web_app/demo/: apps.py  data_translator.py  db_operations.py  models.py  urls.py  utils.py  views.py
web_app/demo/data/: city.py  constants.py  db_connection.py  db_operations.py  optical_path.py  relationship.py  satellite.py
web_app/demo/database/: __init__.py  connection.py  memgraph.py
web_app/demo/imports/: latencies.csv
web_app/demo/resources/: latencyParser.py
web_app/resources/: latenciesTables.txt  latencyParser.py
web_app/static/js/: dropdown.js  index.js  map.js  transmission.js
web_app/staticfiles/demo/: dropdown.js  index.js  map.js  style.css  transmission.js
web_app/templates/: demo.html
web_app/web/: asgi.py  settings.py  urls.py  wsgi.py
web_app_flask/: Dockerfile  app.py  pyproject.toml
web_app_flask/templates/: demo.html
(+125 files in other folders)
