[tool.poetry]
name = "starlink_simulator"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
neo4j = "^1.7.4"
# pymgclient = { version = "0.1.0", markers = "sys_platform != 'win32' and sys_platform != 'cygwin' and sys_platform != 'darwin'" }

numpy = "^1.19.1"
matplotlib = "^3.3.0"
django = "^3.0.8"
psycopg2 = "^2.8.5"
skyfield = "^1.25"
python-memcached = "^1.59"
[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-pylint = "^0.17.0"
pytest-timeout = "^1.4.1"
pytest-cov = "^2.10.0"
pytest-benchmark = "^3.2.3"
pytest-flake8 = "^1.0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
