[tool.poetry]
name = "simulator"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
neo4j = "^1.7.4"

numpy = "^1.19.1"
skyfield = "^1.25"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
