[tool.poetry]
name = "web_app"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
neo4j = "^1.7.4"
# pymgclient = { version = "0.1.0", markers = "sys_platform != 'win32' and sys_platform != 'cygwin' and sys_platform != 'darwin'" }

django = "^3.0.8"
python-memcached = "^1.59"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
